add [dark mode]

--- a/packages/web/content/docs/installation.mdx
+++ b/packages/web/content/docs/installation.mdx
@@ -12,14 +12,16 @@ Fatcn is currently in beta and is optimized for Next.js projects using TypeScrip
 To get started with Fatcn, run the following command in your Next.js project:
 
 ```bash
-npx fatcn-ui init
+npm install shadcn
 ```
 
 This command will:
+```txt
 1. Install all necessary dependencies
 2. Copy UI components to your `components` directory
 3. Add required styles to your `global.css` file
 4. Update your `tailwind.config.ts` with the required configuration
+```
 
 ## Example Usage
 
