--- a/packages/web/content/docs/installation.mdx
+++ b/packages/web/content/docs/installation.mdx
@@ -12,7 +12,7 @@ Fatcn is currently in beta and is optimized for Next.js projects using TypeScrip
 To get started with Fatcn, run the following command in your Next.js project:
 
 ```bash
-npm install shadcn
+npx fatcn-ui init
 ```
 
 This command will:
