add [docs search]

--- a/packages/web/content/docs/how-it-works.mdx
+++ b/packages/web/content/docs/how-it-works.mdx
@@ -1,6 +1,7 @@
 ---
 title: How It Works
 description: Learn how fatcn installs and configures components in your Next.js project.
+category: instructions
 ---
 
 # How It Works
