--- a/packages/web/content/docs/button.mdx
+++ b/packages/web/content/docs/button.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Button'
 description: 'Interactive button component with various styles and states.'
+category: components
 ---
 
 # Button
