--- a/packages/web/content/docs/avatar.mdx
+++ b/packages/web/content/docs/avatar.mdx
@@ -92,11 +92,10 @@ recommended icon pack for this design system.
 
 ## Design Guidelines
 
-- Use primary buttons for main actions
-- Secondary buttons for alternative actions
-- Outline buttons for less prominent actions
-- Ghost buttons for subtle actions within a busy interface
-- Link buttons for navigation-like actions
+- Show initials if no image is available
+- Maintains sufficient color contrast
+- Maintain consistency across the interface
+- Use loading state for async actions
 
 ## Accessibility
 
