--- a/packages/web/content/docs/installation.mdx
+++ b/packages/web/content/docs/installation.mdx
@@ -1,7 +1,7 @@
 ---
 title: Installation
 description: Install and configure fatcn in Next.js.
-category: instructions
+category: overview
 ---
 
 # Installation
