--- a/packages/web/content/docs/button.mdx
+++ b/packages/web/content/docs/button.mdx
@@ -10,6 +10,7 @@ A button component that follows best practices for accessibility and provides mu
 
 ## Usage
 
+<ComponentPreview name='button' />
 
 ## Examples
 
@@ -69,6 +70,7 @@ Available in different sizes to fit your layout.
 Icon buttons are a special size variant designed to fit icons perfectly. Fatcn ships with `hugeicons-react` which is our
 recommended icon pack for this design system.
 
+<ComponentPreview name='icon_button' />
 
 ## Props
 
