--- a/packages/web/content/docs/callout.mdx
+++ b/packages/web/content/docs/callout.mdx
@@ -10,7 +10,7 @@ A Callout is a UI element designed to grab attention and highlight important inf
 
 ## Usage
 
-<ComponentPreview name="button" />
+<ComponentPreview name="callout" />
 
 ## Examples
 
@@ -21,34 +21,34 @@ Buttons come in different variants to match your design needs.
 <Tabs defaultValue='default'>
     <TabsList>
         <TabsTrigger value='default'>Default</TabsTrigger>
-        <TabsTrigger value='secondary'>Secondary</TabsTrigger>
-        <TabsTrigger value='gradient'>Warning</TabsTrigger>
-        <TabsTrigger value='ghost'>Error</TabsTrigger>
-        <TabsTrigger value='link'>Success</TabsTrigger>
+        <TabsTrigger value='info'>Info</TabsTrigger>
+        <TabsTrigger value='warning'>Warning</TabsTrigger>
+        <TabsTrigger value='error'>Error</TabsTrigger>
+        <TabsTrigger value='success'>Success</TabsTrigger>
     </TabsList>
     <TabsContent value='default'>
         <ComponentPreview
-        name='button'
+        name='callout'
         />
     </TabsContent>
-    <TabsContent value='secondary'>
+    <TabsContent value='info'>
         <ComponentPreview
-        name='secondary_button'
+        name='info_callout'
         />
     </TabsContent>
-    <TabsContent value='gradient'>
+    <TabsContent value='warning'>
         <ComponentPreview
-        name='gradient_button'
+        name='warning_callout'
         />
     </TabsContent>
-    <TabsContent value='ghost'>
+    <TabsContent value='error'>
         <ComponentPreview
-        name='ghost_button'
+        name='error_callout'
         />
     </TabsContent>
-    <TabsContent value='link'>
+    <TabsContent value='success'>
         <ComponentPreview
-        name='link_button'
+        name='success_callout'
         />
     </TabsContent>
 </Tabs>
@@ -58,10 +58,8 @@ Buttons come in different variants to match your design needs.
 
 | Prop        | Type                                                          | Default     | Description                                                |
 | ----------- | ------------------------------------------------------------- | ----------- | ---------------------------------------------------------- |
-| `variant`   | `'default' \| 'secondary' \| 'warning' \| 'error' \| 'success`| `'default'` | The visual style of the button                             |
-| `disabled`  | `boolean`                                                     | `false`     | Whether the button is disabled                             |
-| `loading`   | `boolean`                                                     | `false`     | Shows a loading spinner and disables the button            |
-| `asChild`   | `boolean`                                                     | `false`     | Merge props onto child element instead of rendering button |
+| `variant`   | `'default' \| 'info' \| 'warning' \| 'error' \| 'success`| `'default'` | The visual style of the callout                             |
+| `children`  | `React.ReactNode`                                                     | `null`     | The callout content |
 | `className` | `string`                                                      | -           | Additional CSS classes                                     |
 
 ## Design Guidelines
