add [components add for docs]

--- a/packages/web/content/docs/card.mdx
+++ b/packages/web/content/docs/card.mdx
@@ -10,6 +10,7 @@ The card component is a versatile container that groups related content and acti
 
 ## Usage
 
+<ComponentPreview name='card' />
 
 ## Examples
 
@@ -21,33 +22,15 @@ Cards come in different variants to match your design needs.
     <TabsList>
         <TabsTrigger value='default'>Default</TabsTrigger>
         <TabsTrigger value='secondary'>Secondary</TabsTrigger>
-        <TabsTrigger value='gradient'>Gradient</TabsTrigger>
-        <TabsTrigger value='ghost'>Ghost</TabsTrigger>
-        <TabsTrigger value='link'>Link</TabsTrigger>
     </TabsList>
     <TabsContent value='default'>
         <ComponentPreview
-        name='button'
+        name='card'
         />
     </TabsContent>
     <TabsContent value='secondary'>
         <ComponentPreview
-        name='secondary_button'
-        />
-    </TabsContent>
-    <TabsContent value='gradient'>
-        <ComponentPreview
-        name='gradient_button'
-        />
-    </TabsContent>
-    <TabsContent value='ghost'>
-        <ComponentPreview
-        name='ghost_button'
-        />
-    </TabsContent>
-    <TabsContent value='link'>
-        <ComponentPreview
-        name='link_button'
+        name='secondary_card'
         />
     </TabsContent>
 </Tabs>
