--- a/packages/web/content/docs/tabs.mdx
+++ b/packages/web/content/docs/tabs.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Toast'
-description: 'Interactive toast component with various states.'
+title: 'Tabs'
+description: 'Interactive Tabs component with various states.'
 category: components
 ---
 
-# Toast
+# Tabs
 
-A Toast is a non-intrusive, brief notification that provides feedback or updates without disrupting the user’s workflow.
+A Tabs is a non-intrusive, brief notification that provides feedback or updates without disrupting the user’s workflow.
 
 ## Usage
 
@@ -14,7 +14,7 @@ A Toast is a non-intrusive, brief notification that provides feedback or updates
 
 ### Variants
 
-Toasts come in different variants to match your design needs.
+Tabss come in different variants to match your design needs.
 
 <Tabs defaultValue='default'>
     <TabsList>
@@ -49,7 +49,6 @@ Toasts come in different variants to match your design needs.
 
 | Prop        | Type                                                         | Default     | Description                                                |
 | ----------- | ------------------------------------------------------------ | ----------- | ---------------------------------------------------------- |
-| `variant`   | `'success' \| 'error' \| 'warning' \| 'info'`                | `'default'` | The visual style of the button                             |
 | `message`   | `string`                                                     | -           | Shows the number of pages shown at the same time           |
 | `type`      | `ToastType`                                                  | -           | Shows the number of pages shown at the same time           |
 | `duration`  | `number`                                                     | -           | Shows the number of pages shown at the same time           |
